# state-machine

./: .gitignore  Makefile.am  configure.ac  main.c  message-queue.c  message-queue.h  state-machine.c  state-machine.h  state-machine.pro  test-sm.c
